--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ color: blue;
     <br>
     <br>
     <br>
-      <center><img src="imagem /bandeira.jpg" alt=""> <img src="imagem /brasao.png" alt=""></center>
+      <center><img src="//imagem/bandeira.jpg" alt=""> <img src="//imagem/brasao.png" alt=""></center>
       <br>
       <br>
      <center><audio src="audio/oficial.mp3" controls></audio></center>
